random and 404 pages

--- a/wiki/encyclopedia/templates/encyclopedia/404.html
+++ b/wiki/encyclopedia/templates/encyclopedia/404.html
@@ -1,5 +1,3 @@
 {% extends "encyclopedia/layout.html" %} {% block body %}
-<div class="main col-lg-10 col-md-9">
-    {{ page | safe }}
-</div>
+<h3>The page you requested was not found!</h3>
 {% endblock %}
