shw entry in title of website

--- a/wiki/encyclopedia/templates/encyclopedia/title.html
+++ b/wiki/encyclopedia/templates/encyclopedia/title.html
@@ -1,4 +1,4 @@
-{% extends "encyclopedia/layout.html" %} {% block body %} {{ page | safe }}
+{% extends "encyclopedia/layout.html" %} {% block title %} - {{ entry }} {% endblock %} {% block body %} {{ page | safe }}
 <div>
     <a href="{% url 'editpage' %}?entry={{ entry }}">Edit</a>
 </div>
