--- a/wiki/encyclopedia/templates/encyclopedia/404.html
+++ b/wiki/encyclopedia/templates/encyclopedia/404.html
@@ -1,3 +1,3 @@
-{% extends "encyclopedia/layout.html" %} {% block body %}
+{% extends "encyclopedia/layout.html" %} {% block title %} - Not found {% endblock %} {% block body %}
 <h3>The page you requested was not found!</h3>
 {% endblock %}
