--- a/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -1,4 +1,4 @@
-{% extends "encyclopedia/layout.html" %} {% block title %} Encyclopedia {% endblock %} {% block body %}
+{% extends "encyclopedia/layout.html" %} {% block body %}
 <h1>{{ title }}</h1>
 
 <ul>
