--- a/wiki/encyclopedia/templates/encyclopedia/newpage.html
+++ b/wiki/encyclopedia/templates/encyclopedia/newpage.html
@@ -1,4 +1,4 @@
-{% extends "encyclopedia/layout.html" %} {% block body %}
+{% extends "encyclopedia/layout.html" %} {% block title %} - Edit page {% endblock %} {% block body %}
 <h3>Create new wiki page</h3>
 <p>
     {{ error }}
